assets/css/style.css
/** Style File **/

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Mulish:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');

*,
::after,
::before {
    box-sizing: border-box;
}

article,
aside,
dialog,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section {
    display: block;
}

body {
    margin: 0;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    text-align: left;
    background-color: #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 0;
    margin-bottom: 0.5rem;
    font-family: 'Mulish';
}

p {
    margin-top: 0;
    margin-bottom: 1rem;
    font-family: 'Mulish';
}

h1 {
    font-size: 2.5rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.75rem;
}

h4 {
    font-size: 1.5rem;
}

h5 {
    font-size: 1.25rem;
}

h6 {
    font-size: 1rem;
}

img {
    max-width: 100%;
}

.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

@media (min-width: 390px) {
    .container {
        max-width: 100%;
    }

    .row {
        padding: 0 15px;
    }
}

@media (max-width: 1200px) {
    .selling-heading {
        max-width: 500px;
        margin: 0 auto;
    }
}

@media (max-width: 991px) {

    .about-roam-section .headings-box:before {
        top: -10px !important;
    }
}

@media (max-width: 767px) {

    .section-one:before,
    .sim-cards-col .cards-heading-box:before,
    .about-roam-section .headings-box:before {
        width: 0 !important;
    }

    .sim-cards-col .cards-item {
        width: 48%;
    }

    .sim-cards-col .cards-item img {
        width: 100%;
        object-fit: cover;
    }

    .selling-feature-section .feature-item {
        width: 48% !important;
    }

    .destination-section .location-item {
        width: 48% !important;
    }

    .destination-section .location-items {
        flex-wrap: wrap;
    }

    .esim-section .feature-item {
        width: 48% !important;
    }

    .esim-section .feature-items {
        flex-wrap: wrap;
    }

    .feature-inner img {
        max-width: 66px;
    }

}

@media (max-width: 600px) {
    .sim-cards-col .cards-item {
        width: 100%;
    }

    .sim-cards-col .search-fields {
        width: 100% !important;
    }

    .selling-feature-section .feature-item {
        width: 100% !important;
    }

    .selling-feature-section .featues-items {
        align-items: center;
    }

    .selling-feature-section .feature-inner {
        align-items: center;
    }

    .destination-section .destination-heading {
        width: 100% !important;
    }

    .destination-section .destination-button {
        width: 100% !important;
        text-align: left !important;
        margin-top: 20px;
    }

    .destination-more {
        display: inline-block;
    }

    .destination-section .location-item {
        width: 100% !important;
    }

    .testimonial-content {
        width: 100% !important;
        order: 2;
    }

    .testimonial-image {
        width: 100% !important;
        text-align: center !important;
    }

    .testimonial-destination {
        margin-bottom: 50px;
    }

    .esim-section .feature-item {
        width: 100% !important;
    }

    .compatible-devices-section .model-items {
        flex-wrap: wrap;
        gap: 22px;
    }

    .compatible-devices-section .model-item {
        width: 48% !important;
        padding: 15px !important;
    }

    .compatible-image {
        text-align: center;
    }

    .col-half,
    .half-col {
        width: 100% !important;
    }

    .faqs-section .destination-button {
        text-align: left !important;
        margin-top: 20px;
    }

    .faqs-section .faqs-image {
        text-align: center !important;
    }

    .footer-section .footer-column {
        width: 100% !important;
        margin-bottom: 20px;
    }

    .top-selling-section,
    .selling-feature-section,
    .destination-section,
    .esim-section,
    .compatible-devices-section,
    .about-roam-section,
    .faqs-section,
    .testimonial-section {
        padding: 60px 0;
    }

    .mobile-menus {
        width: 100%;
    }

    .navigation {
        width: 100%;
    }

    .faqs-section .faq-heading:before {
        top: -109px !important;
        right: 0 !important;
    }

    .location-item:before {
        content: inherit !important;
    }
}

@media (max-width: 414px){
    .compatible-devices-section .model-item {
        width: 100% !important;
    }
}

@media (min-width: 1201px) {
    .container {
        max-width: 1182px;
    }

}

.container-fullwidth {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
}

.col-half {
    width: 50%;
}

.hidden {
    display: none;
}

/* Header Section */
.header-row {
    justify-content: space-between;
    align-items: center;
}

header .navigation-col {
    display: flex;
    flex-wrap: wrap;
}

.menus-items ul {
    display: flex;
    margin: 0;
    list-style: none;
    padding: 0;
    gap: 15px;
}

header {
    padding: 20px 0;
}

.menus-item a {
    font-family: 'Mulish';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 16px;
    text-align: center;
    text-transform: capitalize;
    color: #676A6C;
    text-decoration: none;
}

header .navigation .menus-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 12px 20px;
    gap: 10px;
}

header .navigation .menus-item.active {
    background: rgba(252, 87, 16, 0.1);
    border-radius: 10px;
}

header .navigation .menus-item.active a {
    color: #FC5710;
}
/* ... */

